# demo-conversion-service

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: database.py  main.py
cf/: dynamodb-table.yml
lambda/: lambda_convert.py  lambda_gen_presigned_url.py  lambda_query_jobs.py
popocr/: __init__.py  convert.py  popocr.py  storage.py
scripts/: lambda_convert.py  lambda_gen_presigned_url.py
simple-frontend/: about-me.html  about-project.html  convert-demo.html  index.html  styles.css  upload.js
tests/: test_ocr.py  test_storage.py
tests/data/: out.pdf.txt
